@@ -151,4 +151,18 @@
         </object>
     </object>
 
+    <object name="export_actions" meta_type="CMF Action Category">
+        <object name="presentation_mode" meta_type="CMF Action">
+            <property name="title">TV</property>
+            <property name="description">Presentation Mode</property>
+            <property name="url_expr">string:$object_url/presentation_view</property>
+            <property name="icon_expr">string:eea-icon eea-icon-3x eea-icon-desktop</property>
+            <property name="available_expr">python:getattr(context, "getPresentation", lambda: False)()</property>
+            <property name="permissions">
+                <element value="View"/>
+            </property>
+            <property name="visible">True</property>
+        </object>
+    </object>
+
 </object>
