@@ -4,6 +4,32 @@
         i18n_domain="eea">
 
     <genericsetup:upgradeSteps
+            source="10.3"
+            destination="11.1"
+            profile="eea.design:default">
+
+        <genericsetup:upgradeDepends
+                title="Import all steps from eea.design profile upgrade 11.1"
+                description="Added presentation mode to export_actions"
+                import_profile="eea.design:upgrade111"
+                />
+
+    </genericsetup:upgradeSteps>
+
+    <genericsetup:upgradeSteps
+            source="10.1"
+            destination="10.3"
+            profile="eea.design:default">
+
+        <genericsetup:upgradeDepends
+                title="Import all steps from eea.design profile upgrade 10.3"
+                description="Added rememberstate jquery plugin"
+                import_profile="eea.design:upgrade103"
+                />
+
+    </genericsetup:upgradeSteps>
+
+    <genericsetup:upgradeSteps
             source="9.5"
             destination="10.1"
             profile="eea.design:default">
@@ -231,16 +257,6 @@
 
     </genericsetup:upgradeSteps>
 
-    <genericsetup:upgradeSteps
-            source="6.9"
-            destination="10.3"
-            profile="eea.design:default">
+    <!-- !!! DON'T ADD new step here. Add them at the top of this file !!! -->
 
-        <genericsetup:upgradeDepends
-                title="Import all steps from eea.design profile upgrade 10.3"
-                description="Added rememberstate jquery plugin"
-                import_profile="eea.design:upgrade103"
-                />
-
-    </genericsetup:upgradeSteps>
 </configure>
