@@ -3,6 +3,8 @@ Changelog
 
 11.1.dev0 - (unreleased)
 ------------------------
+* Feature: Added presentation mode action to export_actions category
+  [voineali refs #22686]
 
 11.0 - (2015-02-03)
 -------------------
